# evo-user-agent-template

./: .gitignore  Cargo.toml  README.md  download-runner.sh  soul.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
