[package]
name = "evo-user-agent-template"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "evo-user-agent"
path = "src/main.rs"

[dependencies]
evo-agent-sdk = { path = "../evo-agents/evo-agent-sdk" }
async-trait   = "0.1"
tokio         = { version = "1", features = ["full"] }
serde_json    = "1.0"
anyhow        = "1.0"
